<resources>
    <string name="app_name">Fruitarians</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_scan">Scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu_1">Welcome</string>
    <string name="title_menu_2">Choose</string>
    <string name="title_menu_3">Scan</string>
    <string name="desc_menu_1">Welcome ratrians, fresh fruit for your healthy body is ready to fulfill your body health!</string>
    <string name="desc_menu_2">Choose fruits that are fresh for our beloved bodies</string>
    <string name="desc_menu_3">Scan the fruit you choose to check the freshness of the fruit to keep it healthy for consumption</string>
    <string name="text_started">Get Started for free</string>
    <string name="header_text_login">Login to your Account</string>
    <string name="login_text">Login</string>
    <string name="title_email">Your Email Address</string>
    <string name="remember_me">Remember me</string>
    <string name="tv_signup">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_verification">Please enter your email address to receive a verification code</string>
    <string name="title_password">Your Password</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_btn">Continue</string>
    <string name="role">Role</string>
    <string name="header_text_register">Create new account</string>
    <string name="target_text_register">Create new</string>
    <string name="your_address">Your Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="email_code">Please enter the token that has been sent to %1$s</string>
    <string name="token_have">Already have a token?</string>
    <string name="token">token</string>
    <string name="myname">%1$s</string>
    <string name="price">Rp%d</string>
    <string name="priceFormat">Rp%s</string>
    <string name="addressFormat">%1s, %3s, %2s</string>
    <string name="unitFormat">/ %s</string>
    <string name="stock">Stock %d</string>
    <string name="created">Joined %1$s</string>
    <string name="tab_text_1">Detail</string>
    <string name="tab_text_2">Buah</string>
    <string name="no_description">No Description</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="scan_text">Insert an image via gallery or camera, click Scan to detect the freshness of the fruit.</string>
    <string name="scan_result">Result :\n%1$s\n%2$s</string>
    <string name="creator">Author\n%1$s</string>
    <string name="dated">Released Date\n%1$s</string>
    <string name="open_hari">%1$s – %2$s</string>
    <string name="open_jam">%1$s – %2$s</string>
    <string name="unit">/%1$s</string>
    <string name="membership">Membership</string>
    <string name="follow">Follow</string>
    <string name="User">User</string>
    <string name="seller">Seller</string>
    <string name="vendor">Vendor</string>
    <string name="articles">Articles</string>

</resources>