<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/iconLock"
        android:layout_width="227dp"
        android:layout_height="227dp"
        android:src="@drawable/icon_lock"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_verification"
        style="@style/Regular16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:text="@string/text_verification"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconLock" />

    <TextView
        android:id="@+id/title_email"
        style="@style/Medium14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="47dp"
        android:text="@string/title_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_verification" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_login_email"
        style="@style/CustomOutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title_email"
        app:layout_constraintTop_toBottomOf="@+id/title_email">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Regular12sp"
            android:id="@+id/input_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="example@gmail.com"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        style="@style/MediumWhite16sp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/send"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

</androidx.constraintlayout.widget.ConstraintLayout>