<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_app_text"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/logo_withtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_text_register"
            style="@style/Medium14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            tools:text="Create new account"
            app:layout_constraintEnd_toEndOf="@+id/logo_app_text"
            app:layout_constraintStart_toStartOf="@+id/logo_app_text"
            app:layout_constraintTop_toBottomOf="@+id/logo_app_text" />

        <TextView
            android:id="@+id/title_name"
            style="@style/Medium14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="60dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_text_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_name"
            style="@style/CustomOutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_name"
            app:layout_constraintTop_toBottomOf="@+id/title_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Regular12sp"
                android:id="@+id/input_register_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="Tafta Abqary"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_role"
            style="@style/Medium14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16dp"
            android:text="@string/role"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_role"
            style="@style/CustomOutlinedBoxDropDown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_role"
            app:layout_constraintTop_toBottomOf="@+id/title_role">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextRole"
                style="@style/Regular12sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="none"
                android:hint="@string/role"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_email"
            style="@style/Medium14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_role" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_email"
            style="@style/CustomOutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_email"
            app:layout_constraintTop_toBottomOf="@+id/title_email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Regular12sp"
                android:id="@+id/input_register_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="example@gmail.com"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_password"
            style="@style/Medium14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_password"
            style="@style/CustomOutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_password"
            app:layout_constraintTop_toBottomOf="@+id/title_password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Regular12sp"
                android:id="@+id/input_register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="min 8 character"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_confirm_password"
            style="@style/Medium14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="@id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_confirm_password"
            style="@style/CustomOutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/title_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Regular12sp"
                android:id="@+id/input_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="min 8 character"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_continue"
            style="@style/MediumWhite16sp"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button_login"
            android:text="@string/continue_btn"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>